# llvm8

./: .gitignore  CMakeLists.txt  README.md  libSDL2.dylib  make.bat  make.sh
.ccls-cache/@@Users@luma@Documents@Git@llvm8/: @usr@local@Cellar@llvm@11.0.0@lib@clang@11.0.0@include@__stddef_max_align_t.h.blob  @usr@local@Cellar@llvm@11.0.0@lib@clang@11.0.0@include@emmintrin.h.blob  @usr@local@Cellar@llvm@11.0.0@lib@clang@11.0.0@include@mm_malloc.h.blob  @usr@local@Cellar@llvm@11.0.0@lib@clang@11.0.0@include@mmintrin.h.blob  @usr@local@Cellar@llvm@11.0.0@lib@clang@11.0.0@include@pmmintrin.h.blob  @usr@local@Cellar@llvm@11.0.0@lib@clang@11.0.0@include@stdarg.h.blob  @usr@local@Cellar@llvm@11.0.0@lib@clang@11.0.0@include@stddef.h.blob  @usr@local@Cellar@llvm@11.0.0@lib@clang@11.0.0@include@stdint.h.blob  @usr@local@Cellar@llvm@11.0.0@lib@clang@11.0.0@include@xmmintrin.h.blob
.ccls-cache/@Users@luma@Documents@Git@llvm8/: external@SDL2@SDL.h.blob  external@SDL2@SDL_assert.h.blob  external@SDL2@SDL_atomic.h.blob  external@SDL2@SDL_audio.h.blob  external@SDL2@SDL_blendmode.h.blob  external@SDL2@SDL_clipboard.h.blob  external@SDL2@SDL_config.h.blob  external@SDL2@SDL_cpuinfo.h.blob  external@SDL2@SDL_endian.h.blob  external@SDL2@SDL_error.h.blob  external@SDL2@SDL_events.h.blob  external@SDL2@SDL_filesystem.h.blob  external@SDL2@SDL_gamecontroller.h.blob  external@SDL2@SDL_gesture.h.blob  external@SDL2@SDL_haptic.h.blob  external@SDL2@SDL_hints.h.blob  external@SDL2@SDL_joystick.h.blob  external@SDL2@SDL_keyboard.h.blob  external@SDL2@SDL_keycode.h.blob  external@SDL2@SDL_loadso.h.blob  external@SDL2@SDL_log.h.blob  external@SDL2@SDL_main.h.blob  external@SDL2@SDL_messagebox.h.blob  external@SDL2@SDL_metal.h.blob  external@SDL2@SDL_mouse.h.blob  external@SDL2@SDL_mutex.h.blob  external@SDL2@SDL_pixels.h.blob  external@SDL2@SDL_platform.h.blob  external@SDL2@SDL_power.h.blob  external@SDL2@SDL_quit.h.blob  external@SDL2@SDL_rect.h.blob  external@SDL2@SDL_render.h.blob  external@SDL2@SDL_rwops.h.blob  external@SDL2@SDL_scancode.h.blob  external@SDL2@SDL_sensor.h.blob  external@SDL2@SDL_shape.h.blob  external@SDL2@SDL_stdinc.h.blob  external@SDL2@SDL_surface.h.blob  external@SDL2@SDL_system.h.blob  external@SDL2@SDL_thread.h.blob  (+15 more)
CMake/: HunterPackages.cmake  LLVM.cmake
roms/: boot.c8  boot.ch8  drw_test.c8  drw_test.ch8  dt_test.c8  dt_test.ch8  reg_test.c8  reg_test.ch8  se_test.c8  se_test.ch8
src/: argparse.hpp  instructions.hpp  main.cpp  utils.hpp
